{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 25,
  "lineage": "dc899658-3734-441b-92b1-0a86e25e76a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "TRIPLEKARMELITE-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1705449b6eb62f4",
            "domain": "vpc",
            "id": "eipalloc-0e1705449b6eb62f4",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-52-47-58-65.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.58.65",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TRIPLEKARMELITE-INSTANCE-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0c4185e6b1b6e3520",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4185e6b1b6e3520",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TSIEUDAT-KEYSSH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb199041d7a52f4e",
            "private_dns": "ip-10-0-1-207.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.207",
            "public_ip": "13.37.221.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-041d3a110f82d1f6d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-06f02385ee432d0b8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d660bdb03a5612c0",
            "tags": {
              "Name": "TRIPLEKARMELITE-INSTANCE-ADMIN"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-INSTANCE-ADMIN"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f02385ee432d0b8"
            ]
          },
          "dependencies": [
            "aws_security_group.TRIPLEKARMELITE-SG-ADMIN",
            "aws_subnet.TRIPLEKARMELITE-PUB-SUBNET",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TRIPLEKARMELITE-INSTANCE-PRIV1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0222af9c6a899ae7d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0222af9c6a899ae7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KEY-PRIV-TO-PUB",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ac402c5553c969c5",
            "private_dns": "ip-10-0-2-17.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09c416def7462a178",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-02267281d28feabe2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020e817036c64877e",
            "tags": {
              "Name": "TRIPLEKARMELITE-INSTANCE-PRIV1"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-INSTANCE-PRIV1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02267281d28feabe2"
            ]
          },
          "dependencies": [
            "aws_key_pair.KEY-PRIV-TO-PUB",
            "aws_security_group.TRIPLEKARMELITE-SG-ADMIN",
            "aws_security_group.TRIPLEKARMELITE-SG-PRIV-WEB",
            "aws_security_group.TRIPLEKARMELITE-SG-REVERSE",
            "aws_subnet.TRIPLEKARMELITE-PRIV-SUBNET1",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TRIPLEKARMELITE-INSTANCE-PRIV2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-067dcd0c6578c0b6c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067dcd0c6578c0b6c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KEY-PRIV-TO-PUB",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-013ac5d77e34a3639",
            "private_dns": "ip-10-0-3-200.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05c5406937a517d14",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-02267281d28feabe2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095f2fa8f9c87563d",
            "tags": {
              "Name": "TRIPLEKARMELITE-INSTANCE-PRIV2"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-INSTANCE-PRIV2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02267281d28feabe2"
            ]
          },
          "dependencies": [
            "aws_key_pair.KEY-PRIV-TO-PUB",
            "aws_security_group.TRIPLEKARMELITE-SG-ADMIN",
            "aws_security_group.TRIPLEKARMELITE-SG-PRIV-WEB",
            "aws_security_group.TRIPLEKARMELITE-SG-REVERSE",
            "aws_subnet.TRIPLEKARMELITE-PRIV-SUBNET2",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TRIPLEKARMELITE-INSTANCE-PRIV3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-067275d043fa0f3bb",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067275d043fa0f3bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KEY-PRIV-TO-PUB",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c51f69c7ae52918c",
            "private_dns": "ip-10-0-4-10.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f5424993e64d25de",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-02267281d28feabe2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a41d414d938b7edb",
            "tags": {
              "Name": "TRIPLEKARMELITE-INSTANCE-PRIV3"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-INSTANCE-PRIV3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02267281d28feabe2"
            ]
          },
          "dependencies": [
            "aws_key_pair.KEY-PRIV-TO-PUB",
            "aws_security_group.TRIPLEKARMELITE-SG-ADMIN",
            "aws_security_group.TRIPLEKARMELITE-SG-PRIV-WEB",
            "aws_security_group.TRIPLEKARMELITE-SG-REVERSE",
            "aws_subnet.TRIPLEKARMELITE-PRIV-SUBNET3",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TRIPLEKARMELITE-INSTANCE-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0e8dfb0a152897752",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8dfb0a152897752",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KEY-PRIV-TO-PUB",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a9b84bd906acce8",
            "private_dns": "ip-10-0-1-179.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.179",
            "public_ip": "13.37.238.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-052a42d32b0bf4f6e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0011e49ed08345522"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d660bdb03a5612c0",
            "tags": {
              "Name": "TRIPLEKARMELITE-INSTANCE-REVERSE"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-INSTANCE-REVERSE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0011e49ed08345522"
            ]
          },
          "dependencies": [
            "aws_key_pair.KEY-PRIV-TO-PUB",
            "aws_security_group.TRIPLEKARMELITE-SG-ADMIN",
            "aws_security_group.TRIPLEKARMELITE-SG-REVERSE",
            "aws_subnet.TRIPLEKARMELITE-PUB-SUBNET",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "TRIPLEKARMELITE-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:internet-gateway/igw-09975b95c958a43ea",
            "id": "igw-09975b95c958a43ea",
            "owner_id": "962615889483"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "TRIPLEKARMELITE-NAT-GTW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1705449b6eb62f4",
            "association_id": "eipassoc-02d87c9163cbeed42",
            "connectivity_type": "public",
            "id": "nat-0355d89b3494da320",
            "network_interface_id": "eni-0f3b6651ca9a2c2ff",
            "private_ip": "10.0.1.165",
            "public_ip": "52.47.58.65",
            "subnet_id": "subnet-0d660bdb03a5612c0",
            "tags": {
              "Name": "TRIPLEKARMELITE-NAT-GTW"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-NAT-GTW"
            }
          },
          "dependencies": [
            "aws_eip.TRIPLEKARMELITE-EIP",
            "aws_internet_gateway.TRIPLEKARMELITE-IGW",
            "aws_subnet.TRIPLEKARMELITE-PUB-SUBNET",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "TRIPLEKARMELITE-ROUTE-DEFAULT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09975b95c958a43ea",
            "id": "r-rtb-017ce1718dedb2d591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017ce1718dedb2d59",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.TRIPLEKARMELITE-IGW",
            "aws_internet_gateway_attachment.TRIPLEKARMELITE-IGW-ATTACHMENT",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TRIPLEKARMELITE-ROUTE-PRIV",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0b9e3a97e0457ab2d",
            "id": "rtb-0b9e3a97e0457ab2d",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0355d89b3494da320",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TRIPLEKARMELITE-ROUTE-PRIV"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-ROUTE-PRIV"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d42894d6d3697e7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.TRIPLEKARMELITE-EIP",
            "aws_internet_gateway.TRIPLEKARMELITE-IGW",
            "aws_nat_gateway.TRIPLEKARMELITE-NAT-GTW",
            "aws_subnet.TRIPLEKARMELITE-PUB-SUBNET",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TRIPLEKARMELITE-ROUTE-PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0a32e576ffdd10277",
            "id": "rtb-0a32e576ffdd10277",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09975b95c958a43ea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TRIPLEKARMELITE-ROUTE1"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-ROUTE1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d42894d6d3697e7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.TRIPLEKARMELITE-IGW",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "TRIPLEKARMELITE-RTB-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ef2bade7e0e75e1",
            "route_table_id": "rtb-0b9e3a97e0457ab2d",
            "subnet_id": "subnet-020e817036c64877e"
          },
          "dependencies": [
            "aws_eip.TRIPLEKARMELITE-EIP",
            "aws_internet_gateway.TRIPLEKARMELITE-IGW",
            "aws_nat_gateway.TRIPLEKARMELITE-NAT-GTW",
            "aws_route_table.TRIPLEKARMELITE-ROUTE-PRIV",
            "aws_subnet.TRIPLEKARMELITE-PRIV-SUBNET1",
            "aws_subnet.TRIPLEKARMELITE-PUB-SUBNET",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "TRIPLEKARMELITE-RTB-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0249e592f6fe50ff0",
            "route_table_id": "rtb-0b9e3a97e0457ab2d",
            "subnet_id": "subnet-095f2fa8f9c87563d"
          },
          "dependencies": [
            "aws_eip.TRIPLEKARMELITE-EIP",
            "aws_internet_gateway.TRIPLEKARMELITE-IGW",
            "aws_nat_gateway.TRIPLEKARMELITE-NAT-GTW",
            "aws_route_table.TRIPLEKARMELITE-ROUTE-PRIV",
            "aws_subnet.TRIPLEKARMELITE-PRIV-SUBNET2",
            "aws_subnet.TRIPLEKARMELITE-PUB-SUBNET",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "TRIPLEKARMELITE-RTB-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044eab464b1beb568",
            "route_table_id": "rtb-0b9e3a97e0457ab2d",
            "subnet_id": "subnet-0a41d414d938b7edb"
          },
          "dependencies": [
            "aws_eip.TRIPLEKARMELITE-EIP",
            "aws_internet_gateway.TRIPLEKARMELITE-IGW",
            "aws_nat_gateway.TRIPLEKARMELITE-NAT-GTW",
            "aws_route_table.TRIPLEKARMELITE-ROUTE-PRIV",
            "aws_subnet.TRIPLEKARMELITE-PRIV-SUBNET3",
            "aws_subnet.TRIPLEKARMELITE-PUB-SUBNET",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TRIPLEKARMELITE-SG-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-06f02385ee432d0b8",
            "description": "TRIPLEKARMELITE-SG-ADMIN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f02385ee432d0b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TRIPLEKARMELITE-SG1-ALLOW-SSH-FROM-EXT",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "TRIPLEKARMELITE-SG-ADMIN",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TRIPLEKARMELITE-SG-ADMIN"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-SG-ADMIN"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d42894d6d3697e7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TRIPLEKARMELITE-SG-PRIV-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-02267281d28feabe2",
            "description": "TRIPLEKARMELITE-SG-PRIV-WEB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02267281d28feabe2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALLOW-SSH-FROM-ADMIN-TO-PRIV",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f02385ee432d0b8"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "TRIPLEKARMELITE-SG-ALLOW-WEB-TO-REVERSE",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0011e49ed08345522"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "TRIPLEKARMELITE-SG-PRIV-WEB",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TRIPLEKARMELITE-SG-PRIV-WEB"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-SG-PRIV-WEB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d42894d6d3697e7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TRIPLEKARMELITE-SG-ADMIN",
            "aws_security_group.TRIPLEKARMELITE-SG-REVERSE",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TRIPLEKARMELITE-SG-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0011e49ed08345522",
            "description": "TRIPLEKARMELITE-SG-REVERSE",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0011e49ed08345522",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TRIPLEKARMELITE-SG-ALLOW-WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "TRIPLEKARMELITE-SG-REVERSE-ALLOW-SSH-FROM-ADMIN",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f02385ee432d0b8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "TRIPLEKARMELITE-SG1",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TRIPLEKARMELITE-SG-REVERSE"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-SG-REVERSE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d42894d6d3697e7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.TRIPLEKARMELITE-SG-ADMIN",
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TRIPLEKARMELITE-PRIV-SUBNET1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-020e817036c64877e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020e817036c64877e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TRIPLEKARMELITE-PRIV-SUBNET1"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-PRIV-SUBNET1"
            },
            "vpc_id": "vpc-0d42894d6d3697e7b"
          },
          "dependencies": [
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TRIPLEKARMELITE-PRIV-SUBNET2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-095f2fa8f9c87563d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095f2fa8f9c87563d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TRIPLEKARMELITE-PRIV-SUBNET2"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-PRIV-SUBNET2"
            },
            "vpc_id": "vpc-0d42894d6d3697e7b"
          },
          "dependencies": [
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TRIPLEKARMELITE-PRIV-SUBNET3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0a41d414d938b7edb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a41d414d938b7edb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TRIPLEKARMELITE-PRIV-SUBNET3"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-PRIV-SUBNET3"
            },
            "vpc_id": "vpc-0d42894d6d3697e7b"
          },
          "dependencies": [
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TRIPLEKARMELITE-PUB-SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0d660bdb03a5612c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d660bdb03a5612c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TRIPLEKARMELITE-PUB-SUBNET"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-PUB-SUBNET"
            },
            "vpc_id": "vpc-0d42894d6d3697e7b"
          },
          "dependencies": [
            "aws_vpc.TRIPLEKARMELITE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TRIPLEKARMELITE-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:vpc/vpc-0d42894d6d3697e7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc15ae6f07d3c0f5",
            "default_route_table_id": "rtb-017ce1718dedb2d59",
            "default_security_group_id": "sg-04af1c54d0dd8f921",
            "dhcp_options_id": "dopt-040e3fc8fa1640715",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d42894d6d3697e7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017ce1718dedb2d59",
            "owner_id": "962615889483",
            "tags": {
              "Name": "TRIPLEKARMELITE-VPC"
            },
            "tags_all": {
              "Name": "TRIPLEKARMELITE-VPC"
            }
          }
        }
      ]
    }
  ]
}